--- a/MyWedding/MyWedding/Views/Home/Contacts.cshtml
+++ b/MyWedding/MyWedding/Views/Home/Contacts.cshtml
@@ -1,24 +1,24 @@
-﻿@using MyWedding.Resources
-@model Wedding.Models.Message
+﻿@using Wedding.Resources
+@model Wedding.Models.Message4
 
 @{
-    ViewBag.Title = @Wedding.contact_contactus;
+    ViewBag.Title = @wedding.contact_contactus;
 }
 
 <div class="container">
     <img src="~/Content/Images/cranes.jpg" class="img-responsive pull-left" style="margin-right:20px;" alt="Cranes in formation by Henrik Hjalmarsson">
 
-    <h1>@Wedding.contact_contactus</h1>
+        <h1>@wedding.contact_contactus</h1>
 
-    <p>Henrik Hjalmarsson</p>
-    <p>@Wedding.mobile +46 (0)70 305 34 31</p>
-    <p>e-mail: hjalmarsson.henrik@gmail.com</p>
-    <br />
-    <br />
-    <p>Julia Vaittinen</p>
-    <p>@Wedding.mobile +46 (0)739 89 18 32</p>
-    <p>e-mail: russianblue.julia@gmail.com</p>
-    <br />
+        <p>Henrik Hjalmarsson</p>
+        <p>@wedding.mobile +46 (0)70 305 34 31</p>
+        <p>e-mail: hjalmarsson.henrik@gmail.com</p>
+        <br />
+        <br />
+        <p>Julia Vaittinen</p>
+        <p>@wedding.mobile +46 (0)739 89 18 32</p>
+        <p>e-mail: russianblue.julia@gmail.com</p>
+        <br />
 </div>
 
 <div class="container" style="margin-top:50px">
@@ -26,11 +26,11 @@
     {
         @Html.AntiForgeryToken()
 
-        <p>@Wedding.messages_info</p>
+            <p>@wedding.messages_info</p>
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 <div>
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = @wedding.contact_yourname } })
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = @wedding.contact_yourname} })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -43,11 +43,11 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value=@Wedding.send class="btn btn-primary " />
+                    <input type="submit" value=@wedding.send class="btn btn-primary " />
             </div>
 
             <hr />
-            @Html.ActionLink(@Wedding.back, "Index")
+            @Html.ActionLink(@wedding.back, "Index")
     }
-</div>
+    </div>
 
