--- a/MyWedding/MyWedding/Views/Home/Contacts.cshtml
+++ b/MyWedding/MyWedding/Views/Home/Contacts.cshtml
@@ -1,22 +1,22 @@
-﻿@using Wedding.Resources
+﻿@using MyWedding.Resources
 @model Wedding.Models.Message4
 
 @{
-    ViewBag.Title = @wedding.contact_contactus;
+    ViewBag.Title = @Wedding.contact_contactus;
 }
 
 <div class="container">
     <img src="~/Content/Images/cranes.jpg" class="img-responsive pull-left" style="margin-right:20px;" alt="Cranes in formation by Henrik Hjalmarsson">
 
-        <h1>@wedding.contact_contactus</h1>
+        <h1>@Wedding.contact_contactus</h1>
 
         <p>Henrik Hjalmarsson</p>
-        <p>@wedding.mobile +46 (0)70 305 34 31</p>
+        <p>@Wedding.mobile +46 (0)70 305 34 31</p>
         <p>e-mail: hjalmarsson.henrik@gmail.com</p>
         <br />
         <br />
         <p>Julia Vaittinen</p>
-        <p>@wedding.mobile +46 (0)739 89 18 32</p>
+        <p>@Wedding.mobile +46 (0)739 89 18 32</p>
         <p>e-mail: russianblue.julia@gmail.com</p>
         <br />
 </div>
@@ -26,28 +26,28 @@
     {
         @Html.AntiForgeryToken()
 
-            <p>@wedding.messages_info</p>
+            <p>@Wedding.messages_info</p>
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 <div>
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = @wedding.contact_yourname} })
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @placeholder = @Wedding.contact_yourname} })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
                 <div>
-                    @Html.TextAreaFor(model => model.MessageText, 6, 55, new { @class = "form-control", @placeholder = @wedding.message })
+                    @Html.TextAreaFor(model => model.MessageText, 6, 55, new { @class = "form-control", @placeholder = @Wedding.message })
                     @Html.ValidationMessageFor(model => model.MessageText, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                    <input type="submit" value=@wedding.send class="btn btn-primary " />
+                    <input type="submit" value=@Wedding.send class="btn btn-primary " />
             </div>
 
             <hr />
-            @Html.ActionLink(@wedding.back, "Index")
+            @Html.ActionLink(@Wedding.back, "Index")
     }
     </div>
 
