New picture plus small fixes.

--- a/MyWedding/MyWedding/Views/Home/Index.cshtml
+++ b/MyWedding/MyWedding/Views/Home/Index.cshtml
@@ -7,14 +7,19 @@
 
 <div class="container">
     <section id="main">
-        <img src="~/Content/Images/Main/balcony.jpg" alt="Henrik och Julia" style="margin-right:20px" class="pull-left img-thumbnail img-responsive" />
+        <img src="~/Content/Images/Main/Couple.jpg" alt="Henrik och Julia" style="margin-right:20px" class="pull-left img-thumbnail img-responsive" />
         <h1>@Wedding.index_h1_title</h1>
         <br />
 
         <p>
             <img src="~/Content/Images/Main/lavendel.png" alt="lavendel" width="60" height="60" align="middle"><i>@Wedding.index_date</i> <img src="~/Content/Images/Main/lavendel.png" alt="lavendel" width="60" height="60" align="middle">
         </p><br />
-        <p>@Wedding.index_info</p><br /><p> @Wedding.index_pageupdate</p>
+        <p>@Wedding.index_info</p><br />
+        <p> @Wedding.index_pageupdate</p>
+        <a href="https://www.flickr.com/photos/juliahenrik/">https://www.flickr.com/photos/juliahenrik/</a> <br />
+        <a href="https://www.youtube.com/watch?v=0HjnZxW4V0U">https://www.youtube.com/watch?v=0HjnZxW4V0U</a> 
+        <br /><br />
+        <p>@Wedding.index_ThanksPictures</p>
         <hr />
 
         <!-- Counter -->
